welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: overloaded method value * with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Boolean)
  return 10*true} 
           ^